--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,8 @@
 @import url(font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300i,400i");
-
+/*@font-face {
+   font-family: 'CircularStd-Book';
+   src: url('assets/fonts/CircularStd/CircularStd-Book.otf') format('otf'),;*/
 /*
 	Ethereal by HTML5 UP
 	html5up.net | @ajlkn
@@ -275,7 +277,7 @@
 
 	body, input, select, textarea {
 		color: rgba(255, 255, 255, 0.75);
-		font-family: "Source Sans Pro", Helvetica, sans-serif;
+		font-family: "CircularStd-Book", Helvetica, sans-serif;
 		font-size: 1rem;
 		font-weight: 300;
 		line-height: 1.65;
@@ -315,7 +317,7 @@
 
 	h1, h2, h3, h4, h5, h6 {
 		color: rgba(255, 255, 255, 0.875);
-		font-family: Arial, Helvetica, sans-serif;
+		font-family: "CircularStd-Book", Helvetica, sans-serif;
 		font-weight: 700;
 		line-height: 1.3;
 		margin: 0 0 0.75rem 0;
@@ -412,7 +414,7 @@
 	code {
 		background: rgba(255, 255, 255, 0.075);
 		border-radius: 0.25rem;
-		font-family: "Courier New", monospace;
+		font-family: "CircularStd-Book", monospace;
 		font-size: 0.8rem;
 		margin: 0 0.25rem;
 		padding: 0.25rem 0.65rem;
@@ -420,7 +422,7 @@
 
 	pre {
 		-webkit-overflow-scrolling: touch;
-		font-family: "Courier New", monospace;
+		font-family: "CircularStd-Book", monospace;
 		font-size: 0.8rem;
 		margin: 0 0 1.5rem 0;
 		white-space: pre-wrap;
@@ -577,7 +579,7 @@
 	label {
 		color: rgba(255, 255, 255, 0.875);
 		display: block;
-		font-family: Arial, Helvetica, sans-serif;
+		font-family: "CircularStd-Book", Helvetica, sans-serif;
 		font-size: 0.8rem;
 		font-weight: 700;
 		margin: 0 0 0.4875rem 0;
@@ -1468,7 +1470,7 @@
 		color: rgba(255, 255, 255, 0.875) !important;
 		cursor: pointer;
 		display: inline-block;
-		font-family: Arial, Helvetica, sans-serif;
+		font-family: "CircularStd-Book", Helvetica, sans-serif;
 		font-size: 0.6rem;
 		font-weight: 700;
 		height: 2.75rem;
